--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.8",
     "@remix-run/router": "^1.0.2",
+    "@types/passport-strategy": "^0.2.35",
     "body-parser": "^1.20.1",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
@@ -33,6 +34,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "passport-strategy": "^1.0.0",
     "pouchdb": "^7.3.0",
     "pouchdb-authentication": "^1.1.3",
     "pouchdb-find": "^7.1.0",
