--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6",
     "relational-pouch": "^4.0.0",
+    "rxjs": "^7.5.7",
     "tss-react": "^4.3.4"
   },
   "devDependencies": {
