--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "dependencies": {
+    "@emotion/css": "^11.10.0",
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
@@ -38,8 +39,8 @@
     "pouchdb": "^7.3.0",
     "pouchdb-authentication": "^1.1.3",
     "pouchdb-find": "^7.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2",
+    "react-dom": "^18.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6",
     "relational-pouch": "^4.0.0",
@@ -71,18 +72,19 @@
     "@types/jest": "^25.2.1",
     "@types/method-override": "^0.0.32",
     "@types/morgan": "^1.9.3",
-    "@types/node": "^13.13.2",
+    "@types/node": "^18.11.7",
     "@types/passport": "^1.0.11",
     "@types/passport-local": "^1.0.34",
     "@types/pouchdb": "^6.4.0",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
+    "@types/react": "^18.0.23",
+    "@types/react-dom": "^18.0.7",
     "@types/react-helmet": "^6.1.5",
     "@types/react-router-dom": "^5.1.4",
     "@types/uuid": "^8.3.4",
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
+    "autoprefixer": "^10",
     "babel-loader": "^8.2.5",
     "babel-preset-razzle": "4.2.17",
     "concurrently": "^5.3.0",
@@ -96,7 +98,8 @@
     "html-webpack-plugin": "^4.5.2",
     "jshint": "^2.13.5",
     "mini-css-extract-plugin": "^0.9.0",
-    "postcss": "8.2.4",
+    "postcss": "^8",
+    "postcss-loader": "^4.0.3",
     "prettier": "^2.7.1",
     "razzle": "^4.2.17",
     "razzle-dev-utils": "^4.2.17",
